# Echarts-Studio

./: README.md  eslint.config.js  index.html  package-lock.json  package.json  prompt.md
.github/workflows/: release.yaml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs
src/components/chart/: ChartErrorBoundary.tsx  ChartPreview.tsx  PngExportDialog.tsx
src/components/data/: DataEditor.tsx
src/components/export/: ExportDialog.tsx
src/components/inspector/: PropertyField.tsx  PropertyInspector.tsx  TreeView.tsx
src/components/json-editor/: JsonEditor.tsx
src/components/layout/: AppShell.tsx  BottomPanel.tsx  CommandPalette.tsx  Sidebar.tsx  Toolbar.tsx
src/components/ui/: breadcrumb.tsx  context-menu.tsx  hover-card.tsx  switch.tsx
src/lib/: updater.ts
src/lib/chart/: computeOverrides.ts  deepEqual.ts  deepMerge.ts  deleteSemantics.test.ts  overrideStatus.test.ts  overrideStatus.ts  path.ts  resolveOption.test.ts  resolveOption.ts  roundtrip.test.ts
src/lib/data/: autoBinding.ts  datasetToOption.test.ts  datasetToOption.ts
src/lib/i18n/: context.tsx  translations.ts
src/lib/persistence/: migrations.test.ts  migrations.ts
src/lib/schema/: defaults.ts  registry.ts
src/lib/utils/: clipboard.ts
src/stores/: projectStore.test.ts  projectStore.ts  uiStore.ts
src/templates/: index.ts
src/types/: project.ts  schema.ts
