[package]
name = "echarts-studio"
version = "0.0.1"
description = "ECharts Studio Desktop"
authors = ["ECharts Studio"]
edition = "2021"

[lib]
name = "echarts_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sys-locale = "0.3"
